clusters/raspberrypi/apps/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minecraft
  name: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - name: minecraft
        image: 05jchambers/legendary-minecraft-geyser-floodgate:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: minecraft-data
          mountPath: /minecraft
        resources:
          limits:
            cpu: 1500m
            memory: 4096M
            ephemeral-storage: 50Mi
          requests:
            cpu: 750m
            memory: 2048M
            ephemeral-storage: 2Mi
        ports:
        - containerPort: 25565
          name: java
        - containerPort: 19132
          name: bedrock-v4
        - containerPort: 19133
          name: bedrock-v6
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-pvc
