clusters/raspberrypi/apps/minecraft/bedrock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-bedrock
  namespace: minecraft
spec:
  type: LoadBalancer
  ports:
    - name: bedrock-v4-udp
      port: 25565
      protocol: UDP
      targetPort: bedrock-v4

  selector:
    app: minecraft
