clusters/raspberrypi/apps/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: java
      port: 25565
      protocol: TCP
      targetPort: java
    - name: bedrock-v4-udp
      port: 19132
      protocol: UDP
      targetPort: bedrock-v4
  selector:
    app: minecraft
