clusters/raspberrypi/apps/minecraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: minecraft-minecraft
      port:
        number: 30100
  ingressClassName: tailscale
  tls:
  - hosts:
    - minecraft
