clusters/raspberrypi/apps/minecraft/minecraft-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-minecraft
  namespace: minecraft
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft-minecraft
          port: 80
